<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.18</version>
	</parent>
	<groupId>es.caib.ripea</groupId>
	<artifactId>ripea</artifactId>
	<version>1.0.2</version>
	<packaging>pom</packaging>
	<properties>
		<spring-boot.version>2.7.18</spring-boot.version>
		<liquibase.version>4.4.3</liquibase.version>
		<implementation.vendor>Límit Tecnologies</implementation.vendor>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<modules>
		<module>ripea-persistence</module>
		<module>ripea-ejb</module>
		<module>ripea-service</module>
		<module>ripea-service-intf</module>
		<module>ripea-back</module>
		<module>ripea-api-interna</module>
		<module>ripea-ear</module>
		<module>ripea-plugin-intf</module>
		<module>ripea-plugin</module>
        <module>ripea-backend</module>
    </modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-common</artifactId>
				<version>1.7.0</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>1.7.0</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-hateoas</artifactId>
				<version>1.7.0</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-security</artifactId>
				<version>1.7.0</version>
			</dependency>
			<dependency>
				<groupId>org.fundaciobit.pluginsib.arxiu</groupId>
				<artifactId>pluginsib-arxiu-caib</artifactId>
				<version>2.0.26</version>
			</dependency>
			<dependency>
				<groupId>es.caib.distribucio</groupId>
				<artifactId>distribucio-rest-client</artifactId>
				<version>0.9.49</version>
			</dependency>
			<dependency>
				<groupId>es.caib.portafib</groupId>
				<artifactId>portafib-ws-api</artifactId>
				<version>1.1</version>
			</dependency>
			<dependency>
				<groupId>es.caib.portafib</groupId>
				<artifactId>portafib-ws-callback-api</artifactId>
				<version>1.1</version>
			</dependency>
			<dependency>
				<artifactId>portafib-callback-beans</artifactId>
				<groupId>es.caib.portafib</groupId>
				<version>1.1</version>
			</dependency>
			<dependency>
				<groupId>es.caib.dir3caib</groupId>
				<artifactId>dir3caib-ws-api</artifactId>
				<version>1.0.7</version>
			</dependency>
			<dependency>
				<groupId>es.caib.pinbal</groupId>
				<artifactId>pinbal-client</artifactId>
				<version>1.4.40.2</version>
			</dependency>
			<dependency>
				<groupId>es.caib.notib</groupId>
				<artifactId>notib-client</artifactId>
				<version>2.0.7</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.5</version>
			</dependency>
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.1</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.9.4</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.10</version>
			</dependency>
			<dependency>
				<groupId>com.turkraft</groupId>
				<artifactId>spring-filter</artifactId>
				<version>2.1.6</version>
			</dependency>
			<dependency>
				<groupId>net.sf.jasperreports</groupId>
				<artifactId>jasperreports</artifactId>
				<version>6.16.0</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.dynamicreports</groupId>
				<artifactId>dynamicreports-core</artifactId>
				<version>6.12.1</version>
			</dependency>
			<dependency>
				<groupId>ma.glasnost.orika</groupId>
				<artifactId>orika-core</artifactId>
				<version>1.5.4</version>
			</dependency>
			<dependency>
				<groupId>opensymphony</groupId>
				<artifactId>sitemesh</artifactId>
				<version>2.5.0</version>
			</dependency>
			<!-- XDocReports -->
			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.core</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.document</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.template.velocity</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.document.docx</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.document.odt</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.converter.docx.xwpf</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.converter.odt.odfdom</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.odfdom.converter.xhtml</artifactId>
				<version>2.0.1</version>
			</dependency>	
			<!-- XDocReports -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>3.15</version>
			</dependency>
			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>itextpdf</artifactId>
				<version>5.4.3</version>
			</dependency>
			<dependency>
				<groupId>com.itextpdf.tool</groupId>
				<artifactId>xmlworker</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.pdfbox</groupId>
				<artifactId>pdfbox</artifactId>
				<version>2.0.24</version>
			</dependency>
			<dependency>
				<groupId>org.jopendocument</groupId>
				<artifactId>jOpenDocument</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>com.googlecode.json-simple</groupId>
				<artifactId>json-simple</artifactId>
				<version>1.1</version>
			</dependency>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>2.10.10</version>
			</dependency>
			<dependency>
				<groupId>com.github.spullara.mustache.java</groupId>
				<artifactId>compiler</artifactId>
				<version>0.8.18</version>
			</dependency>
			<dependency>
				<groupId>javax.ejb</groupId>
				<artifactId>javax.ejb-api</artifactId>
				<version>3.2</version>
			</dependency>
			<dependency>
				<groupId>javax.jws</groupId>
				<artifactId>javax.jws-api</artifactId>
				<version>1.1</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.ws</groupId>
				<artifactId>jbossws-api</artifactId>
				<version>1.1.2.Final</version>
			</dependency>
			<dependency>
				<groupId>org.keycloak</groupId>
				<artifactId>keycloak-core</artifactId>
				<version>22.0.4</version>
			</dependency>
			<!-- Plugin for Jackson which can serialize cyclic object -->
			<dependency>
				<groupId>com.voodoodyne.jackson.jsog</groupId>
				<artifactId>jackson-jsog</artifactId>
				<version>1.1.2</version>
			</dependency>
			<dependency>
				<groupId>com.viafirma</groupId>
				<artifactId>documents-sdk-java</artifactId>
				<version>3.5.140</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<repositories>
		<repository>
			<id>github-governib-maven-repos</id>
			<name>GovernIB Maven Repository</name>
			<url>https://governib.github.io/maven/maven/</url>
		</repository>
		<repository>
			<id>viavansi-repo</id>
			<name>Viavansi Maven Repository</name>
			<url>http://repositorio.viavansi.com/repo</url>
		</repository>
		<repository>
			<id>redhat-repo</id>
			<name>Redhat GA Repository</name>
			<url>https://maven.repository.redhat.com/ga/</url>
		</repository>
		<repository>
		   <id>jaspersoft-third-party</id>
		   <name>Jasper reports (308-permanent-redirect workaround DGMAD)</name>
		   <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
		</repository>
	</repositories>
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
					<ignoreEmptyScmUrl>true</ignoreEmptyScmUrl>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
